examples/errors/function_type.aaa
fn foo begin
    5
end


fn
    main
begin
    nop
end
